@@ -12,6 +12,7 @@ matrix:
     - env: ENV_FILE="travis/35-latest-conda-forge.yml"
     - env: ENV_FILE="travis/36-defaults.yml"
     - env: ENV_FILE="travis/36-latest-conda-forge.yml"
+
     # Python 3.7
     - env: ENV_FILE="travis/37-defaults.yml"
     - env: ENV_FILE="travis/37-latest-conda-forge.yml"
@@ -23,6 +24,9 @@ matrix:
 install:
   # Install conda
   - source travis/install.sh
+  - conda update -n base conda
+  - conda install -n base conda-libmamba-solver
+  - conda config --set solver libmamba
   - conda env create --file="${ENV_FILE}"
   - conda init bash
   - source activate test
