@@ -5,7 +5,8 @@ include *.rst
 include AUTHORS.rst
 include README.rst
 include README.md
-include CHANGES
+include *CHANGES
+exclude *.yml
 recursive-include docs *
 recursive-include data *.json
 recursive-include utils/schema_csvs *
