@@ -9,7 +9,7 @@ __name__ = 'gdelt'
 __author__ = 'Linwood Creekmore III'
 __email__ = 'valinvescap@gmail.com'
 __license__ = 'GNU General Public License v3.0'
-__version__ = '0.1.10.6'
+__version__ = '0.1.11'
 __url__ = 'https://linwoodc3.github.io/gdeltPyR/'
 __description__ = 'Python based framework to retreive Global Database of ' \
                   'Events, Language, and Tone (GDELT)' \
