@@ -53,7 +53,7 @@ setup(
                       " or python_version=='2.7'"
                       ],
     extras_require={
-        'geoSpatial': ["fiona>=1.6", "shapely>=1.5", "geopandas>-1.7"],
+        'geoSpatial': ["fiona>=1.6", "shapely>=1.5", "geopandas>1.7"],
         ":python_version<'3.3'": ["mock", "futures"],
         'r': ['pyarrow']
     },
