@@ -50,6 +50,7 @@ class testParallelWorker(TestCase):
         spam = pd.read_pickle(os.path.join(
                 gdelt.base.BASE_DIR, "data", "events2samp.gz"),
                 compression="gzip").drop('CAMEOCodeDescription',axis=1)
+
         spam.columns = np.arange(len(spam.columns))
         spam[[26,27,28]] = spam[[26,27,28]].astype('str')
 
@@ -77,6 +78,7 @@ class testParallelWorker(TestCase):
         # run the function of gdelt
         url = 'http://data.gdeltproject.org/gdeltv2/20170701234500.export.CSV.zip'
         res = _mp_worker(url,table='events')
+        print(res.columns)
 
         # the test
         return self.assertTrue(res[[0,1,2,3]].equals(spam[[0,1,2,3]]), "Returned dataframe")
